# ML_efield_recons

./: .gitignore  Autoencoder_for_simulation.py  Fake_Data-1_OM_comments.ipynb  Grand_GitHub.ipynb  Overfit_Autoencoder  README.md  autoencoder_ex0.py  extracttraces.py  generatetraces.py  mod_fun.py  pyproject.toml  setup.cfg  traces_visualization.py
Data/: noise_data_0.csv  noise_data_1.csv  noise_data_10.csv  noise_data_11.csv  noise_data_12.csv  noise_data_13.csv  noise_data_14.csv  noise_data_15.csv  noise_data_16.csv  noise_data_17.csv  noise_data_18.csv  noise_data_19.csv  noise_data_2.csv  noise_data_20.csv  noise_data_21.csv  noise_data_22.csv  noise_data_23.csv  noise_data_24.csv  noise_data_25.csv  noise_data_26.csv  noise_data_27.csv  noise_data_28.csv  noise_data_29.csv  noise_data_3.csv  noise_data_30.csv  noise_data_31.csv  noise_data_32.csv  noise_data_33.csv  noise_data_34.csv  noise_data_35.csv  noise_data_36.csv  noise_data_37.csv  noise_data_38.csv  noise_data_39.csv  noise_data_4.csv  noise_data_40.csv  noise_data_41.csv  noise_data_42.csv  noise_data_43.csv  noise_data_44.csv  (+60 more)
scripts_classif/: classif_v1.py
src/efield_denoising/: Net_efield_peak.py  __init__.py  autoencoder_ex0.py  autoencoder_ex1.py  autoencoder_ex2.py  autoencoder_ex3.py
src/efield_denoising/databank/: __init__.py  checkdata.py  cleansims.py  extractdata.py  extracttraces.py  generatetraces.py  visualizeevents.py  visualizetraces.py
src/efield_denoising/hdf5lib/: ComputePeak2PeakOnHDF5.py  __init__.py  hdf5fileinout.py  (+1 more)
src/modules/: dum.py
src/utils/: dum_utils.py
