[metadata]
name = efield_denoising
url = https://github.com/grand-mother/ML_efield_recons
author = GRAND ML team
license = BSD-3-Clause-Clear
description =
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
ext_package = efield_denoising
packages = find:
package_dir =
    = src
include_package_data=True
install_requires =
  numpy
  matplotlib
python_requires = >=3.9

[options.packages.find]
where = src

[bdist_wheel]
universal = 0
